--- a/index.html
+++ b/index.html
@@ -9,8 +9,42 @@
   </head>
   <body>
 
-    <div class="page-header">
 
+
+    <div class="page-header">
+        <nav>
+           <input type="checkbox" id="nav" class="hidden">
+           <label for="nav" class="nav-btn">
+                 <i></i>
+                 <i></i>
+                 <i></i>
+           </label>
+           <div class="logo">
+                <a href="#">Check_in</a>
+           </div>
+           <div class="nav-wrapper">
+                <ul>
+                   <li><a href="#">Home</a></li>
+                   <li><a href="#">Projects</a></li>
+                   <li><a href="#">Education</a></li>
+                   <li><a href="#">About</a></li>
+                   <li><a href="#">Lets know each other</a></li>
+                </ul>
+           </div>
+       </nav>
+        <!-- <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <nav id="navi" >
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="#">Finder</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav> -->
       <div class="container">
         <h1 class=" animated fadeInUp delay-1">Jawakar Durai</h1>
         <p class=" animated fadeInUp delay-2" >Lorem ipsum dolor sit amet, consectetur adipisicing eli ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
