--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    <li><a href="#">Projects</a></li>
                    <li><a href="#">Education</a></li>
                    <li><a href="#">About</a></li>
-                   <li><a href="#">Lets know each other</a></li>
+                   <li><a href="touch.html">Lets know each other</a></li>
                 </ul>
            </div>
        </nav>
@@ -56,4 +56,77 @@
     </div>
 
   </body>
+</html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+<style type="text/css">
+
+.box{
+    width:600px;
+    height:400px;
+    border:1px solid red ;
+    margin:10px auto;
+    position:relative;
+}
+.ball{
+    width:50px;
+    height:50px;
+    background-color:#000;
+    border-radius:50%;
+    position:absolute;
+    top:0px;
+    left:0px;
+}
+
+</style>
+</head>
+<body>
+	<div class="box">
+	<label id="xy"></label>
+		<div class="ball"></div>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script type="text/javascript">
+	$(function(){
+		var ball=$(".ball");
+		var topy=0;
+		var l=0;
+
+		var high="B"
+		var low="R"
+
+		setInterval(function(){
+
+			if (topy>=350)
+				high="T";
+
+			if (topy<=0)
+				high="B";
+
+			if (l>=550)
+				low="L";
+
+			if (l<=0)
+				low="R";
+
+			if (high=="B")
+				topy++;
+			else
+				topy--;
+
+			if (low=="R")
+				l++;
+			else
+				l--;
+
+			ball.css("top",topy);
+			ball.css("left",l);
+
+		},0);
+	});
+	</script>
+</body>
 </html>
